--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-jupytext==1.11.3
-numpy==1.20.1
-streamlit_pandas_profiling==0.1.2
-streamlit==1.2.0
+jupytext
+numpy
+streamlit_pandas_profiling
+streamlit
 bokeh
 matplotlib
 pandas
