--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-jupytext
-numpy
-streamlit_pandas_profiling
-streamlit
-bokeh
-matplotlib
-pandas
-string_grouper
-pandas_profiling
-python_dateutil
-xlrd
-xlsxwriter
+jupytext==1.11.3
+numpy==1.20.1
+streamlit_pandas_profiling==0.1.3
+streamlit==1.2.0
+bokeh==2.3.2
+matplotlib==3.3.4
+pandas==1.2.4
+string_grouper==0.4.0
+pandas_profiling==3.2.0
+python_dateutil==2.8.1
+xlrd==1.2.0
+xlsxwriter==1.4.3
